@@ -314,9 +314,9 @@ Usage: (handler-bind ((type-error #'type-error-handler)) ...)"
                   #+(or CLISP ALLEGRO CMU19 OpenMCL LISPWORKS) "weakhash"
                   #+(or CLISP LISPWORKS) "weakhash2"))
       (with-accumulating-errors (error-count total-count) (run-test ff)))
-    ;; fails on amd64 - disable for now...
-    ;;(with-accumulating-errors (error-count total-count)
-    ;;  (run-test "bind" :eval-method :eval :logname "bind-eval"))
+    (unless disable-risky ; fails on amd64 - disable for now...
+      (with-accumulating-errors (error-count total-count)
+        (run-test "bind" :eval-method :eval :logname "bind-eval")))
     (with-accumulating-errors (error-count total-count)
       (run-test "bind" :eval-method :compile :logname "bind-compile"))
     #+(or CLISP ALLEGRO CMU SBCL LISPWORKS)
